Add hotkeys to change dictionary (#1243)
* Add nextEntryDifferentDictionary and previousEntryDifferentDictionary hotkeys

* Update settings

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2879,6 +2879,8 @@
             <option value="previousEntry3">Go to previous entry (x3)</option>
             <option value="lastEntry">Go to last entry</option>
             <option value="firstEntry">Go to first entry</option>
+            <option value="nextEntryDifferentDictionary">Go to next dictionary</option>
+            <option value="previousEntryDifferentDictionary">Go to previous dictionary</option>
             <option value="historyBackward">Navigate backward in history</option>
             <option value="historyForward">Navigate forward in history</option>
             <option value="addNoteKanji">Add kanji note</option>
