Refactor hotkey handling (#1250)
* Create HotkeyHandler

* Update Display to use HotkeyHandler

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -92,6 +92,7 @@
 <script src="/mixed/js/display-history.js"></script>
 <script src="/mixed/js/display-notification.js"></script>
 <script src="/mixed/js/dynamic-loader.js"></script>
+<script src="/mixed/js/hotkey-handler.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
 <script src="/mixed/js/scroll.js"></script>
 <script src="/mixed/js/text-scanner.js"></script>
