--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -108,6 +108,7 @@
 <script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/dynamic-loader.js"></script>
 <script src="/mixed/js/frame-endpoint.js"></script>
+<script src="/mixed/js/hotkey-handler.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
 <script src="/mixed/js/panel-element.js"></script>
 <script src="/mixed/js/scroll.js"></script>
