Stroke count marker (#1251)
* Add stroke-count definition

* Update options

* Update documentation

* Add helper

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2602,6 +2602,10 @@
                     <td><code class="anki-field-marker">{onyomi}</code></td>
                     <td>Onyomi (Chinese reading) for the kanji, expressed as hiragana.</td>
                 </tr>
+                <tr>
+                    <td><code class="anki-field-marker">{stroke-count}</code></td>
+                    <td>Number of strokes that the kanji character has.</td>
+                </tr>
             </tbody>
             <thead>
                 <tr>
