Clarify Anki card type dropdown (#1253)

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2459,6 +2459,7 @@
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Card type</div>
+                <div class="settings-item-description">Different types of definition can have separate settings.</div>
             </div>
             <div class="settings-item-right">
                 <select id="anki-card-primary-type">
@@ -2467,6 +2468,7 @@
                 </select>
             </div>
         </div></div>
+        <div class="anki-card-primary-separator"></div>
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Deck</div>
