Update default settings page (#1254)
* Update settings v2 to be the default for existing users

* Update information on the old settings page

* Update information on the new settings page

* Update tests

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <title>Yomichan Options</title>
+        <title>Yomichan Options (Old)</title>
         <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
         <link rel="icon" type="image/png" href="/mixed/img/icon32.png" sizes="32x32">
@@ -21,10 +21,11 @@
                 <h1>Yomichan Options</h1>
             </div>
 
-            <div class="alert alert-info">
-                <a style="text-decoration: underline;" href="/bg/settings2.html">
-                    An updated version of the settings page is available for testing and feedback.
-                </a>
+            <div class="alert alert-warning">
+                This is the old version of the settings page, which is currently deprecated and does not include all options.
+                Please use <a href="/bg/settings2.html">the new settings page</a>,
+                and if you have any feedback, feel free to share
+                <a href="https://github.com/FooSoft/yomichan/issues/1000" target="_blank" rel="noopener noreferrer">on Github</a>.
             </div>
 
             <div class="profile-form ignore-form-changes">
