--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Settings v2</title>
+    <title>Yomichan Settings</title>
     <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
     <link rel="icon" type="image/png" href="/mixed/img/icon32.png" sizes="32x32">
@@ -65,15 +65,16 @@
             <div class="settings-item-left">
                 <div class="settings-item-label">
                     <strong>Notice:</strong>
-                    This new settings page is currently in beta. Questions, comments, and other feedback
-                    is welcome and can be shared
+                    This settings page is planned to replace
+                    <a href="/bg/settings.html">the old settings page</a>.<br>
+                    Questions, comments, and other feedback is welcome and can be shared
                     <a href="https://github.com/FooSoft/yomichan/issues/1000" target="_blank" rel="noopener noreferrer">on Github</a>.
                 </div>
             </div>
         </div></div>
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Use the v2 settings page by default</div>
+                <div class="settings-item-label">Use this new settings page by default</div>
             </div>
             <div class="settings-item-right">
                 <label class="toggle"><input type="checkbox" data-setting="global.useSettingsV2" data-scope="global"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
