Add support for frontend hotkeys; add scanSelectedText action (#1266)
* Add support for frontend hotkeys; add scanSelectedText action

* Remove unused global

* Remove duplicate hotkey handler script

--- a/ext/bg/popup-preview.html
+++ b/ext/bg/popup-preview.html
@@ -45,6 +45,7 @@
 <script src="/mixed/js/text-scanner.js"></script>
 
 <script src="/mixed/js/document-util.js"></script>
+<script src="/mixed/js/hotkey-handler.js"></script>
 <script src="/fg/js/dom-text-scanner.js"></script>
 <script src="/fg/js/popup.js"></script>
 <script src="/fg/js/text-source-range.js"></script>
