Update copyHostSelection to be popup-only (#1267)

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -3013,7 +3013,7 @@
             <option value="addNoteTermKana" data-scopes="popup search">Add term note (reading)</option>
             <option value="viewNote" data-scopes="popup search">View note</option>
             <option value="playAudio" data-scopes="popup search">Play audio</option>
-            <option value="copyHostSelection" data-scopes="popup search">Copy selection</option>
+            <option value="copyHostSelection" data-scopes="popup">Copy host window selection</option>
             <option value="scanSelectedText" data-scopes="web">Scan selected text</option>
         </select>
         <div class="hotkey-list-item-flex-row">
