--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -101,6 +101,7 @@
 <script src="/mixed/js/audio-system.js"></script>
 <script src="/mixed/js/dictionary-data-util.js"></script>
 <script src="/mixed/js/display.js"></script>
+<script src="/mixed/js/display-audio.js"></script>
 <script src="/mixed/js/display-generator.js"></script>
 <script src="/mixed/js/display-history.js"></script>
 <script src="/mixed/js/display-notification.js"></script>
