--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -3060,6 +3060,7 @@
 <script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/document-util.js"></script>
 <script src="/mixed/js/dom-data-binder.js"></script>
+<script src="/mixed/js/hotkey-util.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
 <script src="/mixed/js/object-property-accessor.js"></script>
 <script src="/mixed/js/panel-element.js"></script>
