--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -30,9 +30,9 @@
                 <optgroup label="Primary Profile" id="profile-select-option-group"></optgroup>
             </select></span>
         </button>
-        <a class="nav-button action-open-options" data-icon="cog" title="Options&#10;(Middle click to open in new tab)"></a>
+        <a class="nav-button action-open-settings" data-icon="cog" title="Options&#10;(Middle click to open in new tab)"></a>
         <a class="nav-button action-open-search" data-icon="magnifying-glass" title="Search (Alt + Insert)&#10;(Middle click to open in new tab)"></a>
-        <a class="nav-button action-open-help" data-icon="question-mark" title="Information"></a>
+        <a class="nav-button action-open-info" data-icon="question-mark" title="Information"></a>
     </div>
 </div>
 
@@ -41,13 +41,13 @@
     <label class="link-group">
         <span class="link-group-icon"><input type="checkbox" id="enable-search2"></span><span class="link-group-label">Enable content scanning</span>
     </label>
-    <a class="link-group action-open-options">
+    <a class="link-group action-open-settings">
         <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Options</span>
     </a>
     <a class="link-group action-open-search">
         <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Search</span>
     </a>
-    <a class="link-group action-open-help">
+    <a class="link-group action-open-info">
         <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Help</span>
     </a>
 </div>
