--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -94,6 +94,8 @@
 <script src="/mixed/js/display-notification.js"></script>
 <script src="/mixed/js/dynamic-loader.js"></script>
 <script src="/mixed/js/hotkey-handler.js"></script>
+<script src="/mixed/js/hotkey-help-controller.js"></script>
+<script src="/mixed/js/hotkey-util.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
 <script src="/mixed/js/scroll.js"></script>
 <script src="/mixed/js/text-scanner.js"></script>
