Update descriptions for configuring browser keyboard shortcuts (#1278)

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1594,20 +1594,23 @@
                     <p>
                         Yomichan includes keyboard shortcuts for some common actions that can be configured
                         using the web browser's settings.
-                        Instructions on how to access this settings page are listed below for a few browsers.
+                        To configure these shortcuts:
                     </p>
 
-                    <h3>Chrome</h3>
-                    <ul>
-                        <li>Open the settings page (<a href="chrome://settings/">chrome://settings/</a>)</li>
-                        <li>Click the "Extensions" link in the left sidebar (<a href="chrome://extensions/">chrome://extensions/</a>)</li>
-                        <li>Open the left side panel using the hamburger (<strong>≡</strong>) menu button, then click "Keyboard shortcuts"</li>
+                    <ul data-show-for-browser="chrome">
+                        <li>Open <a data-select-on-click="">chrome://extensions/shortcuts</a> in a new tab.</li>
+                        <li>Find the <em>Yomichan</em> section and configure the shortcuts.</li>
                     </ul>
 
-                    <h3>Firefox</h3>
-                    <ul>
-                        <li>Open the extensions page (<a href="about:addons">about:addons</a>)</li>
-                        <li>Click the button on the right with the gear icon, then click "Manage Extension Shortcuts"</li>
+                    <ul data-show-for-browser="edge">
+                        <li>Open <a data-select-on-click="">edge://extensions/shortcuts</a> in a new tab.</li>
+                        <li>Find the <em>Yomichan</em> section and configure the shortcuts.</li>
+                    </ul>
+
+                    <ul data-show-for-browser="firefox">
+                        <li>Open the extensions page (<a data-select-on-click="">about:addons</a>)</li>
+                        <li>Click the button on the right with the gear icon, then click <em>Manage Extension Shortcuts</em>.</li>
+                        <li>Find the <em>Yomichan</em> section and configure the shortcuts.</li>
                     </ul>
                 </div>
             </div>
