Move popup-menu.js (#1280)

--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -348,6 +348,7 @@
 <script src="/mixed/js/html-template-collection.js"></script>
 <script src="/mixed/js/object-property-accessor.js"></script>
 <script src="/mixed/js/panel-element.js"></script>
+<script src="/mixed/js/popup-menu.js"></script>
 <script src="/mixed/js/selector-observer.js"></script>
 <script src="/mixed/js/task-accumulator.js"></script>
 
@@ -362,7 +363,6 @@
 <script src="/bg/js/settings/generic-setting-controller.js"></script>
 <script src="/bg/js/settings/modal.js"></script>
 <script src="/bg/js/settings/modal-controller.js"></script>
-<script src="/bg/js/settings/popup-menu.js"></script>
 <script src="/bg/js/settings/scan-inputs-simple-controller.js"></script>
 <script src="/bg/js/settings/settings-controller.js"></script>
 <script src="/bg/js/settings/status-footer.js"></script>
