--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -3067,6 +3067,7 @@
 <script src="/mixed/js/html-template-collection.js"></script>
 <script src="/mixed/js/object-property-accessor.js"></script>
 <script src="/mixed/js/panel-element.js"></script>
+<script src="/mixed/js/popup-menu.js"></script>
 <script src="/mixed/js/selector-observer.js"></script>
 <script src="/mixed/js/task-accumulator.js"></script>
 <script src="/mixed/js/text-to-speech-audio.js"></script>
@@ -3094,7 +3095,6 @@
 <script src="/bg/js/settings/generic-setting-controller.js"></script>
 <script src="/bg/js/settings/modal.js"></script>
 <script src="/bg/js/settings/modal-controller.js"></script>
-<script src="/bg/js/settings/popup-menu.js"></script>
 <script src="/bg/js/settings/popup-preview-controller.js"></script>
 <script src="/bg/js/settings/profile-controller.js"></script>
 <script src="/bg/js/settings/scan-inputs-controller.js"></script>
