--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1291,6 +1291,7 @@
         <script src="/mixed/js/document-util.js"></script>
         <script src="/mixed/js/dom-data-binder.js"></script>
         <script src="/mixed/js/html-template-collection.js"></script>
+        <script src="/mixed/js/hotkey-util.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
         <script src="/mixed/js/selector-observer.js"></script>
         <script src="/mixed/js/task-accumulator.js"></script>
